@@ -18,6 +18,14 @@ SetWeather=1
 ; Task name as visible in Condor interface (without the file extension)
 DefaultTaskName=A
 
+; The path where flight plans for --default CLI option should be searched 
+; (when no value is provided condor2nav will search for files in their default location)
+FlightPlansPath=
+
+; The path where race results for --last-race CLI option should be searched 
+; (when no value is provided condor2nav will search for files in their default location)
+RaceResultsPath=
+
 [XCSoar]
 ; The path of XCSoarData directory on target device that is used in XCSoar PRF file
 XCSoarDataPath=%LOCAL_PATH%\
